Finalize refactoring